--- a/dev/cv/cv.html
+++ b/dev/cv/cv.html
@@ -70,11 +70,7 @@
 					</tr>
 					<tr>
 						<td class="ctc_title">Mobile</td>
-						<td class="ctc_txt">+61 4 21 46 47 49</td>
-					</tr>
-					<tr>
-						<td class="ctc_title">Skype</td>
-						<td class="ctc_txt"><a href="skype:py.pointereau?call">py.pointereau</a></td>
+						<td class="ctc_txt">+61 4 21 464 749</td>
 					</tr>
 				</table>
 			</td>
@@ -95,7 +91,7 @@
 			
 			<section>
 				<p>Since I started using Internet, I have been passionate about website building. At first it was only a hobby, and later I realized it could be my full-time job. It has been <span id="years"></span> years now, and I am still moving forward, always learning and experimenting to find solutions for every new step of modern web development.</p>
-				<p>You cal also find some details on my personal website: <a href="http://yojimbo.fr">yojimbo.fr</a>, and dissect its developement on the <a href="https://github.com/Yojimb0/Yojimbo_2014">GitHub repository</a> </p>
+				<!-- <p>You cal also find some details on my personal website: <a href="http://yojimbo.fr">yojimbo.fr</a>, and dissect its development on the <a href="https://github.com/Yojimb0/Yojimbo_2014">GitHub repository</a> </p> -->
 			</section>
 		</div>
 
@@ -105,31 +101,31 @@
 				<table>
 					<tr>
 						<td><small>August 2014 - Now</small></td>
-						<td><strong>News Corp Australia</strong> - Sydney CBD (Australia)</td><td><em>Front-end web developer / Front-end Architect</em></td>
+						<td><strong>News Corp Australia</strong> - Sydney CBD (Australia)<br><em>Senior software engineer (Front-end architecture / development)</em></td>
 					</tr>
 					<tr>
 						<td><small>March 2014 - August 2014</small></td>
-						<td><strong>Bauer Media</strong> - Sydney CBD (Australia)</td><td><em>Front-end web developer</em></td>
+						<td><strong>Bauer Media</strong> - Sydney CBD (Australia)<br><em>Front-end web developer</em></td>
 					</tr>
 					<tr>
 						<td><small>Jan. 2014 - March 2014</small></td>
-						<td><strong>ABC</strong> - Sydney CBD (Australia)</td><td><em>Front-end web developer</em></td>
+						<td><strong>ABC</strong> - Sydney CBD (Australia)<br><em>Front-end web developer</em></td>
 					</tr>
 					<tr>
 						<td><small>Oct. 2013 - Jan. 2014</small></td>
-						<td><strong>Panthacorp</strong> - Manly (Australia)</td><td><em>Front-end web developer</em></td>
+						<td><strong>Panthacorp</strong> - Manly (Australia)<br><em>Front-end web developer</em></td>
 					</tr>
 					<tr>
 						<td><small>Oct. 2009 - Aug. 2013</small></td>
-						<td><strong>Ventadis</strong> - Paris (France)</td><td><em>Front-end web developer</em></td>
+						<td><strong>Ventadis</strong> - Paris (France)<br><em>Front-end web developer</em></td>
 					</tr>
 					<tr>
 						<td><small>Sept. 2007 - Oct. 2009</small></td>
-						<td><strong>Nala Multimédia</strong> - Limoges (France)</td><td><em>Back-end & Front-end web developer</em></td>
+						<td><strong>Nala Multimédia</strong> - Limoges (France)<br><em>Back-end & Front-end web developer</em></td>
 					</tr>
 					<tr>
 						<td><small>Sept. 2005 - Sept. 2007</small></td>
-						<td><strong>AGM</strong> - Limoges (France)</td><td><em>Software developer, web designer & developer</em></td>
+						<td><strong>AGM</strong> - Limoges (France)<br><em>Software developer, web designer & developer</em></td>
 					</tr>
 				</table>
 			</section>
@@ -137,37 +133,37 @@
 
 		<div>
 			<h3>Technical skills</h3>
-			<section class="nobreak">
+			<!-- <section class="nobreak"> -->
 				<h5>Languages & technologies</h5>
 				<table>
 					<tr>
 						<td>HTML</td>
-						<td>With semantic approach, use and understanding of tools like HTML5 Boilerplate</td>
+						<td>Semantic approach, accessibility, Web Components</td>
 					</tr>
 					<tr>
 						<td>CSS</td>
-						<td>Use of preprocessors, LESS, SASS, Compass<br>Responsive design, Progressive enhancement approach, spriting, optimizations, use of SVG</td>
+						<td>Use of preprocessors, SASS, PostCSS<br>Responsive design, Progressive enhancement approach, spriting, optimizations, use of SVG</td>
 					</tr>
 					<tr>
 						<td>JavaScript</td>
-						<td>Use of modern object oriented patterns, use of modern frameworks (React, AngularJS, Backbone ..), frameworks optimizations, performance issues</td>
+						<td>ES6, modern patterns and frameworks (VueJS, Polymer, React ..)</td>
 					</tr>
 					<tr>
-						<td>Between front and back</td>
-						<td>PHP Templating (CodeIgniter, CakePhp, Drupal), Java templating with Freemarker, ASP.net templating</td>
+						<td>Workflow enhancement</td>
+						<td>Webpack build processing setup (Babel, Scss/PostCSS, hot-reloading), linting, testing with Tape & Mocha</td>
 					</tr>
 					<tr>
 						<td>Back-end</td>
-						<td>NodeJS including ExpressJS, sockets, RESTful approach, PHP, MySQL, MongoDB</td>
+						<td>NodeJS including ExpressJS, sockets, RESTful approach, templating with Pug. Serverless, Firebase.</td>
 					</tr>
 				</table>
 			</section>
-			<section class="nobreak">
+			<!-- <section class="nobreak">
 				<h5>Softwares and tools</h5>
 				<table>
 					<tr>
 						<td>Code editors</td>
-						<td>Sublime Text 2/3, Brackets.io, Coda 2, Notepad ++</td>
+						<td>Sublime Text 3, </td>
 					</tr>
 					<tr>
 						<td>Source control</td>
@@ -197,7 +193,7 @@
 						</td>
 					</tr>
 				</table>
-			</section>
+			</section> -->
 		</div>
 		
 
@@ -212,24 +208,43 @@
 
 
 		<div class="nobreak">
-			<h4><em>August 2014 - Now:</em> Front-end web developer / Front-end Architect at <strong>News Corp Australia</strong> - Sydney CBD (Australia)</h4>
+			<h4><em>August 2014 - Now:</em> Senior software engineer (Front-end architecture / development) at <strong>News Corp Australia</strong> - Sydney CBD (Australia)</h4>
 			<section>
 				<p><em>
 					<a href="http://www.newscorpaustralia.com/">News Corp</a> is one of Australia's largest media companies, employing more than 8,000 staff nationwide and approximately 3,000 journalists. The publicly listed company's interests span newspaper and magazine publishing, Internet, subscription television, market research, DVD and film distribution, and film and television production trading assets.
 				</em></p>
-				<h5>Key responsibilities</h5>
+				<h5>Aug 2014 - Jan 2015: Front-End Developer - Integrated Sales products</h5>
 				<ul>
-					<li>Complete front-end architecture & responsive-design rewrite of the metropolitan/regional newspaper article pages (DailyTelegraph, PerthNow, HeraldSun, AdelaideNow, CourierMail + 6 regionals + 4 locals)</li>
-					<li>Architecturing and templating of the rolling news article pages (for live coverage)</li>
-					<li>Architecturing of a component library for internal use across sites</li>
-					<li>Prototyping & Architecturing of a solution for sharing custom-advertisment across all sites</li>
-					<li>Front-End research and prototyping</li>
+					<li>Rework and updates of products from internal catalogue (Lumberjack, skins ..)</li>
+					<li>Development of new products (Javascript gallery, custom campaigns)</li>
 				</ul>
-				<h5>Key achievments</h5>
+				<h5>Jan 2015 - Jun 2016: Front-End Developer - Responsive Article Page for Metropolitan and Regional brands</h5>
 				<ul>
-					<li>Lead on an award winning web-application developped during DevFoundry (1 day internal developers hack-day)</li>
+					<li>First implementation of a responsive approach on our network, based on newly developped Node.JS rendering engine</li>
+					<li>Complete front-end architecture & responsive-design rewrite of the metropolitan/regional newspaper digital versions (DailyTelegraph, PerthNow, HeraldSun, AdelaideNow, CourierMail + 6 regionals + 4 locals)</li>
+					<li>Work-flow and code-base improvements</li>
+					<li>Architecture & Prototyping of a solution for sharing custom-advertisement across all sites</li>
+					<li>Initiative on new technology implementation (Google AMP)</li>
+				</ul>
+				<h5>Jun 2016 - Sept 2017: Lead Front-End Developer - Masthead Reimagine</h5>
+				<ul>
+					<li>Working with designers and stakeholders to define requierments for the project</li>
+					<li>Managing the developpers and collaborating on finding a relevant architecture for the project</li>
+					<li>Creation of the first iteration of our component library (Tangram)</li>
+					<li>Organising training session for other teams</li>
+					<li>Prototyping around new technology (Progressive Web App)</li>
+				</ul>
+				<h5>Sept 2017 - Now: Lead Front-End Developer - Global Preference Center</h5>
+				<ul>
+					<li>Managing the developpers and collaborating on finding a relevant architecture for the websites newsletter/preference dashboard</li>
+					<li>Second iteration of the component library</li>
+					<li>Maintaining a multi-brand styling system</li>
+				</ul>
+				<h5>Side achievements</h5>
+				<ul>
+					<li>Key part of the software engineering leadership team, in charge of the organization of team-bonding events, and internal culture enhancement</li>
+					<li>Lead on several winning web-applications developed during internal hackathon events</li>
 					<li>Creation of a front-end working group for innovations an tech-debt resolution</li>
-					<li>Organization of after work team-bonding events</li>
 				</ul>
 			</section>
 		</div>
@@ -260,7 +275,7 @@
 				<h5>Key responsibilities</h5>
 				<ul>
 					<li>CMS Templating over a Java backend with Freemarker</li>
-					<li>CSS / HTML, on the higly modular codebase, use of Sass and mixins to handle responsive states</li>
+					<li>CSS / HTML, on the higly modular code-base, use of Sass and mixins to handle responsive states</li>
 					<li>Javascript and jQuery plugin development, BackboneJS (For the search result)</li>
 				</ul>
 			</section>
@@ -273,7 +288,7 @@
 			<h4><em>Oct. 2013 - Jan. 2014:</em> Front-end web developer at <strong>Panthacorp</strong> - Manly (Australia)</h4>
 			<section>
 				<p><em>
-					<a href="http://www.panthacorp.com/">Panthacorp</a> is a small consulting company that create online applications for web & mobile devices. Project I was on was a media selling platform for AAP (Australian Associated Press).
+					<a href="http://www.panthacorp.com/">Panthacorp</a> is a small consulting company that create on-line applications for web & mobile devices. Project I was on was a media selling platform for AAP (Australian Associated Press).
 				</em></p>
 				<h5>Key responsibilities</h5>
 				<ul>
@@ -283,14 +298,14 @@
 				<h5>Key achievements</h5>
 				<ul>
 					<li>
-						AngularJS developement, to create the front-end side of an images/videos shop.
+						AngularJS development, to create the front-end side of an images/videos shop.
 						<ul>
-							<li>Authentification to the servers</li>
+							<li>Authentication to the servers</li>
 							<li>API calling to retrieve listings and show images</li>
 							<li>secure downloads of the assets ...</li>
 						</ul>
 					</li>
-					<li>Responsive design, targetting tablets and desktop browsers</li>
+					<li>Responsive design, targeting tablets and desktop browsers</li>
 					<li>First Agile experience</li>
 					<li>Good teamwork with AAP team</li>
 				</ul>
@@ -394,7 +409,7 @@
 				</ul>
 				<h5>Key achievements</h5>
 				<ul>
-					<li>Proficiency on Windev, leading to a quick understanding of the existing codebase and rapid integration in the development team</li>
+					<li>Proficiency on Windev, leading to a quick understanding of the existing code-base and rapid integration in the development team</li>
 					<li>Complete design rework (Usability, proper look and feel)</li>
 				</ul>
 			</section>
