--- a/dev/cv/cv.html
+++ b/dev/cv/cv.html
@@ -12,7 +12,7 @@
 	@media all{
 		* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 		
-		body{font-family: 'Open Sans', sans-serif;font-size:0.7em;padding:3%;}
+		body{font-family: 'Open Sans', sans-serif;font-size:0.7em;padding:3%;max-width: 1000px;margin: auto;}
 
 		h1{color:#3D85C6;font-size:2.0em;margin: 0;}
 		h2{color:#3D85C6;font-size:1.6em;margin:0.2em 0 0;font-style: italic;}
@@ -44,10 +44,13 @@
 		.section_main table td:first-of-type{white-space: nowrap;}
 		.section_main section{padding: 0 2em;}
 		.section_main h4 em{font-style: normal;font-weight: normal}
+		
+		hr{border: 1px solid #3D85C6;border-width: 1px 0 0;margin: 20px 0;}
+
 	}
 
 	@media print{
-		body {padding:0;}
+		body {padding:0;max-width: 100%}
 	}
 				
 
@@ -60,7 +63,7 @@
 		<tr>
 			<td class="head_l">
 				<h1>Pierre-Yves Pointereau</h1>
-				<h2>Front-end Web Developer</h2>
+				<h2>Senior Front-end Engineer</h2>
 			</td>
 			<td class="head_r">
 				<table class="ctc">
@@ -149,7 +152,7 @@
 						<td>ES6, modern patterns and frameworks (VueJS, Polymer, React ..)</td>
 					</tr>
 					<tr>
-						<td>Workflow enhancement</td>
+						<td>Work-flow enhancement</td>
 						<td>Webpack build processing setup (Babel, Scss/PostCSS, hot-reloading), linting, testing with Tape & Mocha</td>
 					</tr>
 					<tr>
@@ -157,57 +160,13 @@
 						<td>NodeJS including ExpressJS, sockets, RESTful approach, templating with Pug. Serverless, Firebase.</td>
 					</tr>
 				</table>
-			</section>
-			<!-- <section class="nobreak">
-				<h5>Softwares and tools</h5>
-				<table>
-					<tr>
-						<td>Code editors</td>
-						<td>Sublime Text 3, </td>
-					</tr>
-					<tr>
-						<td>Source control</td>
-						<td>Git (<a href="https://github.com/Yojimb0/Yojimbo_2014">My Github account</a>), TFS</td>
-					</tr>
-					<tr>
-						<td>Design</td>
-						<td>Sketch, Photoshop, Fireworks</td>
-					</tr>
-					<tr>
-						<td>Workflow enhancement</td>
-						<td>Constant use of Chrome DevTools, Grunt & Gulp Automation (With plugins like Yeoman, Sass, Watch, Uglify, JSHint, etc ..), Webpack / Browserify, Transmit or SublimeFTP for FTP needs</td>
-					</tr>
-					<tr>
-						<td>Online tools used,<br>blog regularly consulted</td>
-						<td>
-							<a href="http://devdocs.io">Devdocs.io</a>, 
-							<a href="http://stackoverflow.com">stackoverflow.com</a>, 
-							<a href="http://tutsplus.com">tutsplus.com</a> network, 
-							<a href="http://css-tricks.com">css-tricks.com</a>, 
-							<a href="http://google.com/fonts">google.com/fonts</a>, 
-							<a href="http://lea.verou.me">lea.verou.me</a>, 
-							<a href="http://smashingmagazine.com">smashingmagazine.com</a>, 
-							<a href="http://paulirish.com">paulirish.com</a>, 
-							<a href="http://webplatformdaily.org">webplatformdaily.org</a>,
-							<a href="http://addyosmani.com">addyosmani.com</a>
-						</td>
-					</tr>
-				</table>
-			</section> -->
+			<!-- </section> -->
 		</div>
-		
-
-		<div class="nobreak">
-			<h3>Language</h3>
-			<section>
-				<p>French: Mother Tongue<br>English: Fluent.</p>
-			</section>
-		</div>
-
-		<h3>Professional experience</h3>
 
 
 		<div class="nobreak">
+			<h3>Professional experience</h3>
+
 			<h4><em>August 2014 - Now:</em> Senior software engineer (Front-end architecture / development) at <strong>News Corp Australia</strong> - Sydney CBD (Australia)</h4>
 			<section>
 				<p><em>
@@ -215,12 +174,12 @@
 				</em></p>
 				<h5>Aug 2014 - Jan 2015: Front-End Developer - Integrated Sales products</h5>
 				<ul>
-					<li>Rework and updates of products from internal catalogue (Lumberjack, skins ..)</li>
+					<li>Rework and updates of products from internal catalog (Lumberjack, skins ..)</li>
 					<li>Development of new products (Javascript gallery, custom campaigns)</li>
 				</ul>
 				<h5>Jan 2015 - Jun 2016: Front-End Developer - Responsive Article Page for Metropolitan and Regional brands</h5>
 				<ul>
-					<li>First implementation of a responsive approach on our network, based on newly developped Node.JS rendering engine</li>
+					<li>First implementation of a responsive approach on our network, based on newly developed Node.JS rendering engine</li>
 					<li>Complete front-end architecture & responsive-design rewrite of the metropolitan/regional newspaper digital versions (DailyTelegraph, PerthNow, HeraldSun, AdelaideNow, CourierMail + 6 regionals + 4 locals)</li>
 					<li>Work-flow and code-base improvements</li>
 					<li>Architecture & Prototyping of a solution for sharing custom-advertisement across all sites</li>
@@ -228,15 +187,15 @@
 				</ul>
 				<h5>Jun 2016 - Sept 2017: Lead Front-End Developer - Masthead Reimagine</h5>
 				<ul>
-					<li>Working with designers and stakeholders to define requierments for the project</li>
-					<li>Managing the developpers and collaborating on finding a relevant architecture for the project</li>
+					<li>Working with designers and stakeholders to define requirements for the project</li>
+					<li>Managing the developers and collaborating on finding a relevant architecture for the project</li>
 					<li>Creation of the first iteration of our component library (Tangram)</li>
-					<li>Organising training session for other teams</li>
+					<li>Organizing training session for other teams</li>
 					<li>Prototyping around new technology (Progressive Web App)</li>
 				</ul>
 				<h5>Sept 2017 - Now: Lead Front-End Developer - Global Preference Center</h5>
 				<ul>
-					<li>Managing the developpers and collaborating on finding a relevant architecture for the websites newsletter/preference dashboard</li>
+					<li>Managing the developers and collaborating on finding a relevant architecture for the websites newsletter/preference dashboard</li>
 					<li>Second iteration of the component library</li>
 					<li>Maintaining a multi-brand styling system</li>
 				</ul>
@@ -246,7 +205,7 @@
 					<li>Lead on several winning web-applications developed during internal hackathon events</li>
 					<li>Creation of a front-end working group for innovations an tech-debt resolution</li>
 				</ul>
-			</section>
+			</section><hr>
 		</div>
 
 
@@ -262,7 +221,7 @@
 					<li>Front-End research and prototyping (Javascript Framework for the checkout process, async components loading ...)</li>
 					<li>Responsive Design</li>
 				</ul>
-			</section>
+			</section><hr>
 		</div>
 
 
@@ -278,7 +237,7 @@
 					<li>CSS / HTML, on the higly modular code-base, use of Sass and mixins to handle responsive states</li>
 					<li>Javascript and jQuery plugin development, BackboneJS (For the search result)</li>
 				</ul>
-			</section>
+			</section><hr>
 		</div>
 
 
@@ -309,7 +268,7 @@
 					<li>First Agile experience</li>
 					<li>Good teamwork with AAP team</li>
 				</ul>
-			</section>
+			</section><hr>
 		</div>
 
 		<div class="nobreak">
@@ -348,7 +307,7 @@
 					<li>Complete rewrite of HTML / CSS and Javascript over 4 years</li>
 					<li>Effective dealing with emergencies during huge traffic volumes in sales periods</li>
 				</ul>
-			</section>
+			</section><hr>
 		</div>
 		
 
@@ -388,7 +347,7 @@
 					<li>Widening my working knowledge of CSS</li>
 					<li>Implementations of newly introduced Ajax technology</li>
 				</ul>
-			</section>
+			</section><hr>
 		</div>
 
 		<div class="nobreak">
@@ -432,41 +391,20 @@
 		</div>
 
 		<div class="nobreak">
-			<h3>Websites built in free-time</h3>
-			<section>
-				<p>Most recent</p>
-				<ul>
-					<li><a href="http://www.le-cac.fr/">le-cac.fr</a> (Chartered accountant office) - Design, HTML, CSS, JavaScript, back-end tools</li>
-					<li><a href="http://kubedesign.fr">kubedesign.fr</a> (3D images creation studio, for interior design or exhibition stands) - HTML, CSS, JavaScript</li>
-					<li>This CV - Build in static HTML and CSS, with webfont, simply printed in PDF from Google Chrome</li>
-				</ul>
-			</section>
-		</div>
-
-		<div class="nobreak">
 			<h3>Interests</h3>
 			<section>
 				<h5>Sports</h5>
 				<ul>
 					<li>Climbing</li>
-					<li>Skiing</li>
+					<li>Fitness</li>
 					<li>White water sports</li>
 				</ul>
-				<p><h5 class="inlined">Volunteering: </h5><span>for cancer research charity event (500 Ferrari's against cancer - <a href="http://sportetcollection.info">sportetcollection.info</a>)</span></p>
-				<h5>International driving license</h5>
+				<h5>Woodworking</h5>
+				<h5>Video games</h5>
 			</section>
 		</div>
 
 	</section>
-
-
-
-
-
-
-
-
-
 
 	
 </body>
