--- a/dev/cv/cv.html
+++ b/dev/cv/cv.html
@@ -382,7 +382,7 @@
 					<li>Proficiency on Windev, leading to a quick understanding of the existing code-base and rapid integration in the development team</li>
 					<li>Complete design rework (Usability, proper look and feel)</li>
 				</ul>
-			</section><hr>
+			</section>
 		</div>
 
 		<div class="nobreak">
@@ -426,7 +426,7 @@
 	</section>
 
 
-	<small style="display:block;text-align:center;opacity:.5">Icons designed by Monkik from Flaticon</small>
+	<small style="display:block;text-align:center;opacity:.5;margin-top:30px">Icons designed by Monkik from Flaticon</small>
 
 
 
